src/components/card/Card.style.scss
@import "../../styles/helpers";

.card {
  padding: .5rem;
  position: relative;
  overflow: hidden;

  * {

    &.card__section > img {
      border-radius: .5rem;
    }

    &:first-child.card__section {
      margin-top: 0;

      &--border {
        padding-top: 0;
        border-top: none;
      }

    }
    &:last-child.card__section {
      margin-bottom: 0;

      &--border {
        padding-bottom: 0;
        border-bottom: none;
      }
    }
  }

  &--outline {
    outline: 1px solid borderColor();
    outline-offset: .5rem;
    margin: .5rem;
  }

  &__section {
    margin-bottom: .5rem;
    margin-top: .5rem;
    position: relative;

    &--border {
      margin-right: -.5rem;
      margin-left: -.5rem;
      padding: .5rem;

      border-top: 1px solid borderColor();
      border-bottom: 1px solid borderColor();

      + .card__section--border {
        border-top: none;
        margin-top: -.5em;
      }
    }
  }

}

@function getMixedColor($color) {
  @return mix($bodyBg, if($color == $primary, $white, $color), if($color == $primary, 90%, 80%));
}

@each $name, $color in $colors {
  .card--#{$name} {
    @include box(false, $color);

    &.card--none {
      background: transparent;
      border-color: transparent;
    }

    &.card--filled {
      border-color: transparent;
    }

    &.card--outlined {
      background: transparent;
    }


    &.card--gradient {

      &:before {
        position: absolute;
        width: 100%;
        height: 100%;
        top: 0;
        left: 0;
        opacity: 75%;
        content: "";
      }


      &.card--gradient-top-left:before {
        background: linear-gradient(135deg, backgroundColor($color) 0%, transparent 50%);
      }

      &.card--gradient-bottom-left:before {
        background: linear-gradient(45deg, backgroundColor($color) 0%, transparent 50%);
      }

      &.card--gradient-top-right:before {
        background: linear-gradient(225deg, backgroundColor($color) 0%, transparent 50%);
      }

      &.card--gradient-bottom-right:before {
        background: linear-gradient(315deg, backgroundColor($color) 0%, transparent 50%);
      }


    }

  }
}

